--- a/views/email-template.ejs
+++ b/views/email-template.ejs
@@ -41,24 +41,28 @@
             >Contract Terms of the projects:</span
           >
         </h3>
-        <div><p>tx-hash: <%= details.transactionHash %></p></div>
         <div style="margin-top:30px;line-height:28px;font-size:15px;">
           <p>
-            This contract is between <b><%= details.proCreatorName %></b>, from
-            <b><%= details.proCreatorAdd %></b> with email
-            <b><%= details.proCreatorEmail%></b>, phone
-            <b><%= details.proCreatorPhone%></b> and pan
-            <b><%= details.proCreatorPan%></b>
+            This contract is between <b><%= details.proCreatorName %></b>, having PAN no
+            <b><%= details.proCreatorPan%></b> and registered addreess
+            <b><%= details.proCreatorAdd %></b> with contact details
+            <b><%= details.proCreatorPhone%></b> and email 
+            <b><%= details.proCreatorEmail%></b>.
           </p>
           <p><strong>And</strong></p>
-          <p><b><%= details.investorName %></b> having contact details as</p>
+          <p><b><%= details.investorName %></b> having PAN <b><%= details.investorPan %></b>, present address 
+            <b><%= details.investorAdd %></b> and email <b><%= details.investorEmail %></b> with phone <b><%= details.investorPhone %></b>. </p>
           <p><strong>To certify that :</strong></p>
           <p>
             <b><%= details.investorName %></b> has invested the amount of INR
-            <b><%= details.paymentAmount %></b> to back this the project
+            <b><%= details.paymentAmount %></b> with immutable transaction id 
+            <b><%= details.transactionHash %></b> to support
             <b><%= details.projectName %></b> and therefore, is entitled to
-            receive share of <b><%= details.share %>%</b> and convertable
-            <b><%= details.conv %>%</b>
+            receive <b><%= details.share %>%</b> of convertible notes, locked in for three years at eight percent yearly interest maturing after three years.
+          </p>
+          <p><strong> OR/AND </strong></p>
+          <p>
+            Will convert to common shares from 10% of the available equity pool, on a share capital model, at the time of another equity funding/sell off, only if continued for more than 3 years of lock in period.  
           </p>
         </div>
       </td>
@@ -75,24 +79,9 @@
           style="line-height:28px;font-size:15px;"
         >
           <tr>
-            <td width="20" valign="top"><strong>1.</strong></td>
+            <td width="20" valign="top"></td>
             <td valign="top">
-              The convertibles notes will be paid back at 8% yearly interest
-              after three years, albeit company is profitable by the end of
-              third year.
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2" style="padding:15px 0px;text-align:center;">
-              <strong>OR</strong>
-            </td>
-          </tr>
-          <tr>
-            <td width="10" valign="top"><strong>2.</strong></td>
-            <td valign="top">
-              May be converted into common shares (as a dynamically calculated
-              percentage quota out of 10% allocated venture capitalist share for
-              this funding goal) as per share capital distribution model
+              The startup/company should be profitable by the end of three year on its audited balance sheet. 
             </td>
           </tr>
         </table>
@@ -102,47 +91,36 @@
       <td style="padding:20px;">
         <h3>Payment release:</h3>
         <p style="line-height:28px;font-size:15px;">
-          There will be an escrow account for every investor where the money
+          There will be an <b>escrow</b> account for every investor where the money
           will be kept after investments and will be disbursed to
-          startup/projects only when they reach certain promised milestone as
-          per payment release clause given below
+          startup/projects only when they reach a certain promised milestone as
+          per payment release clause given below:
         </p>
         <p>&nbsp;</p>
         <p style="line-height:28px;font-size:15px;">
-          To protect backers/investors interest and money, Poolfunders has
-          defined a workflow where money would be released in three stages
+          To protect backers/investors interest and money, The Poolfunders has
+          defined a workflow where money would be released in three stages.
         </p>
         <ul style="line-height:28px;font-size:15px;margin:25px 0px;">
           <li style="margin-bottom:15px;">
-            First stage: 25% release after the campaign has ended on PoolFunders
-            platform.
+            First stage: 25% released within 3 days after the campaign has ended on Poolfunders platform.
           </li>
           <li style="margin-bottom:15px;">
-            Second stage: 40% once the first milestone has been met and fund
-            utilisation has been made in proper use. (check:Funds approval
-            process)
+            Second stage: 40% once the first milestone had met and fund utilisation has been made in proper use. (check:Funds approval process)
           </li>
           <li style="margin-bottom:15px;">
-            Third stage: 35% once the Second milestone has been met in
-            accordance with proper fund utilisations. (check:Funds approval
-            process)
+            Third 	stage: 35% once the Second milestone had met in accordance with 	proper fund utilisations. (check:Funds approval process)
           </li>
         </ul>
         <p style="line-height:28px;font-size:15px;">
-          Failure to meet any of the above KPIs would result in the refund of
+          Important: Failure to meet any of the above KPIs would result in the refund of
           remaining money, at that stage, back to investors.
         </p>
         <p style="line-height:28px;font-size:15px;">
-          Also note that, if the idea of product/service for which campaign is
-          started turns out to be copyright infringed, then the funding
-          remaining amount would be returned back to investor and Owner will be
-          blacklisted from our platform and may get possible chances of legal
-          action.
+          Also note that, if the idea of product/service for which campaign is started, turns out to be copyright infringed, then the funding remaining amount would be returned back to Investors. Owner will be blacklisted from our platform and may get possible chances of legal action.
         </p>
         <p style="line-height:28px;font-size:15px;">
-          And finally, you understand that investing in startups are highly
-          risky and you may lose part or all of your amount if your invested
-          startups fails
+          And finally, you understand that investing in startups are highly risky and you may lose part or all of your amount if your invested startups fails.
         </p>
       </td>
     </tr>
